--- a/app/src/main/res/layout/fragment_unit1.xml
+++ b/app/src/main/res/layout/fragment_unit1.xml
@@ -210,7 +210,7 @@
                 android:textStyle="bold" />
 
             <RadioGroup
-                android:id="@+id/ragCpuStamd"
+                android:id="@+id/ragCpuStand"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding8"
